# lexAnalyzer

./: .dir-locals.el  CMakeLists.txt  LICENSE  lexAnalysis.c  regex.c  regex.h  test.sh
include/: list.h  regex.h  tools.h  type.h
src/: list.c  regex.c  tools.c
tests/: regex_testcases.c
